# Cinder-Sumcheck

./: BENCHMARK_RESULTS.md  Cargo.toml  README.md
benches/: cinder_sumcheck.rs
src/: bench_single.rs  cinder_mle.rs  eq_polynomial.rs  field.rs  lib.rs  sparse_matrix.rs  sumcheck.rs  tests.rs
