[package]
name = "cinder"
version = "0.1.0"
edition = "2021"
description = "Cinder: A simple dense-to-sparse MLE compiler with sumcheck"

# Keep this crate independent of the parent workspace
[workspace]

[dependencies]
# BLS12-381 from arkworks
ark-ff = "0.4"
ark-bls12-381 = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"

# External
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cinder_sumcheck"
harness = false

